--- a/Youtube.html
+++ b/Youtube.html
@@ -26,9 +26,9 @@
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-2.jpeg"></div>
                 <div>
-                    <div class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</div>
-                    <div class="video-creator">Marques Brownlee</div>
-                    <div class="video-content">3.4M views · 6 months ago</div>
+                    <div class="video-title">Try Not To Laugh Challenge #9</div>
+                    <div class="video-creator">Markiplier</div>
+                    <div class="video-content">19M views · 4 years ago</div>
                 </div>
             </div>
         </div>
@@ -37,9 +37,9 @@
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-4.jpeg"></div>
                 <div>
-                    <div class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</div>
-                    <div class="video-creator">Marques Brownlee</div>
-                    <div class="video-content">3.4M views · 6 months ago</div>
+                    <div class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</div>
+                    <div class="video-creator">Veritasium</div>
+                    <div class="video-content">18M views · 4 months ago</div>
                 </div>
             </div>
         </div>
@@ -48,20 +48,20 @@
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-5.jpeg"></div>
                 <div>
-                    <div class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</div>
-                    <div class="video-creator">Marques Brownlee</div>
-                    <div class="video-content">3.4M views · 6 months ago</div>
+                    <div class="video-title">Kadane's Algorithm to Maximum Sum Subarray Problem</div>
+                    <div class="video-creator">CS Dojo</div>
+                    <div class="video-content">519K views · 5 years ago</div>
                 </div>
             </div>
         </div>
         <div class="Img-class">
             <div><img class="thumbnail" src="Thumbnail/thumbnail-3.webp"></div>
             <div class="video-details">
-                <div ><img class="profile-pic" src="Profile/channel-3.jpeg"></div>
+                <div ><img class="profile-pic" src="Profile/channel-3.jpg"></div>
                 <div>
-                    <div class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</div>
-                    <div class="video-creator">Marques Brownlee</div>
-                    <div class="video-content">3.4M views · 6 months ago</div>
+                    <div class="video-title">Luffy vs Kaido [ AMV ] MIDDLE OF THE NIGHT</div>
+                    <div class="video-creator">Vipper </div>
+                    <div class="video-content">13M views 1 year ago</div>
                 </div>
             </div>
         </div>
@@ -70,9 +70,9 @@
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-6.jpeg"></div>
                 <div>
-                    <div class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</div>
-                    <div class="video-creator">Marques Brownlee</div>
-                    <div class="video-content">3.4M views · 6 months ago</div>
+                    <div class="video-title">Anything You Can Fit In The Circle I’ll Pay For</div>
+                    <div class="video-creator">MrBeast</div>
+                    <div class="video-content">141M views · 1 year ago</div>
                 </div>
             </div>
         </div>
@@ -81,9 +81,9 @@
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-7.jpeg"></div>
                 <div>
-                    <div class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</div>
-                    <div class="video-creator">Marques Brownlee</div>
-                    <div class="video-content">3.4M views · 6 months ago</div>
+                    <div class="video-title">Why Planes Don't Fly Over Tibet</div>
+                    <div class="video-creator">RealLifeLore</div>
+                    <div class="video-content">6.6M views · 1 year ago</div>
                 </div>
             </div>
         </div>
@@ -92,9 +92,9 @@
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-8.jpeg"></div>
                 <div>
-                    <div class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</div>
-                    <div class="video-creator">Marques Brownlee</div>
-                    <div class="video-content">3.4M views · 6 months ago</div>
+                    <div class="video-title">Inside The World's Biggest Passenger Plane</div>
+                    <div class="video-creator">Tech Vision</div>
+                    <div class="video-content">3.7M views · 10 months ago</div>
                 </div>
             </div>
         </div>
