--- a/Youtube.html
+++ b/Youtube.html
@@ -4,11 +4,28 @@
     <title>youtube clone</title> 
     <link rel="stylesheet" href="thumbnail.css">
     <link rel="stylesheet" href="grid_file.css">
+    <link rel="stylesheet" href="header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="header">
+        <div class="left-section">
+            <img class="ham" src="Logo/hamburger-menu.svg">
+            <img class="ytlogo" src="Logo/youtube-logo.svg">
+        </div>
+        <div class="middle-section">
+            <input class="search-bar" type="text" placeholder="Search">
+            <button class="search-button"><img class="search-logo" src="Logo/search.svg"></button>
+        </div>
+        <div class="right-section">
+            <img class="upload" src="Logo/youtube-upload.svg">
+            <img class="apps" src="Logo/youtube-apps.svg">
+            <img class="notifi" src="Logo/notifications.svg">
+            <img class="dp" src="Logo/mydp.svg">
+        </div>
+    </div>
     <div class="container">
         <div class="Img-class">
             <div><img class="thumbnail" src="Thumbnail/thumbnail-1.webp"></div>
