DAY 4 HTML-CSS Progress

--- a/Youtube.html
+++ b/Youtube.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="thumbnail.css">
     <link rel="stylesheet" href="grid_file.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="side-bar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -18,13 +19,17 @@
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
             <button class="search-button"><img class="search-logo" src="Logo/search.svg"></button>
+            <button class="voice-button"><img class="voice-search" src="Logo/voice-search-icon.svg"></button>
         </div>
         <div class="right-section">
-            <img class="upload" src="Logo/youtube-upload.svg">
+            <img class="upload" src="Logo/upload.svg">
             <img class="apps" src="Logo/youtube-apps.svg">
             <img class="notifi" src="Logo/notifications.svg">
-            <img class="dp" src="Logo/mydp.svg">
+            <img class="dp" src="Logo/mydb.webp">
         </div>
+    </div>
+    <div class="sidebar">
+        sidebar
     </div>
     <div class="container">
         <div class="Img-class">
@@ -112,6 +117,50 @@
                     <div class="video-title">Inside The World's Biggest Passenger Plane</div>
                     <div class="video-creator">Tech Vision</div>
                     <div class="video-content">3.7M views · 10 months ago</div>
+                </div>
+            </div>
+        </div>
+        <div class="Img-class">
+            <div><img class="thumbnail" src="Thumbnail/thumbnail-3.webp"></div>
+            <div class="video-details">
+                <div ><img class="profile-pic" src="Profile/channel-3.jpg"></div>
+                <div>
+                    <div class="video-title">Luffy vs Kaido [ AMV ] MIDDLE OF THE NIGHT</div>
+                    <div class="video-creator">Vipper </div>
+                    <div class="video-content">13M views 1 year ago</div>
+                </div>
+            </div>
+        </div>
+        <div class="Img-class">
+            <div><img class="thumbnail" src="Thumbnail/thumbnail-8.webp"></div>
+            <div class="video-details">
+                <div ><img class="profile-pic" src="Profile/channel-8.jpeg"></div>
+                <div>
+                    <div class="video-title">Inside The World's Biggest Passenger Plane</div>
+                    <div class="video-creator">Tech Vision</div>
+                    <div class="video-content">3.7M views · 10 months ago</div>
+                </div>
+            </div>
+        </div>
+        <div class="Img-class">
+            <div><img class="thumbnail" src="Thumbnail/thumbnail-11.webp"></div>
+            <div class="video-details">
+                <div ><img class="profile-pic" src="Profile/channel-11.jpeg"></div>
+                <div>
+                    <div class="video-title">One Piece Epic Moment : Luffy jumped to the plaza.</div>
+                    <div class="video-creator">ling023 </div>
+                    <div class="video-content">9.9M views 12 years ago</div>
+                </div>
+            </div>
+        </div>
+        <div class="Img-class">
+            <div><img class="thumbnail" src="Thumbnail/thumbnail-3.webp"></div>
+            <div class="video-details">
+                <div ><img class="profile-pic" src="Profile/channel-3.jpg"></div>
+                <div>
+                    <div class="video-title">Luffy vs Kaido [ AMV ] MIDDLE OF THE NIGHT</div>
+                    <div class="video-creator">Vipper </div>
+                    <div class="video-content">13M views 1 year ago</div>
                 </div>
             </div>
         </div>
