DAY 5 HTML-CSS PROGRESS

--- a/youtube/index.html
+++ b/youtube/index.html
@@ -29,11 +29,18 @@
         </div>
     </div>
     <div class="sidebar">
-        sidebar
+        <div class="sidebar-link"><img src="Logo/home.svg"> Home</div>
+        <div class="sidebar-link"><img src="Logo/explore.svg">Explore</div>
+        <div class="sidebar-link"><img src="Logo/subscriptions.svg">Subscriptions</div>
+        <div class="sidebar-link"><img src="Logo/originals.svg">Originals</div>
+        <div class="sidebar-link"><img src="Logo/youtube-music.svg">YouTube Music</div>    
+        <div class="sidebar-link"><img src="Logo/library.svg">Library</div>    
     </div>
     <div class="container">
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-1.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-1.webp">
+            <div class="video-time">14:20</div>
+        </div>
             <div class="video-details">
                 <div><img class="profile-pic" src="Profile/channel-1.jpeg"></div>
                 <div>
@@ -44,7 +51,9 @@
             </div>
         </div>
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-2.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-2.webp">
+                <div class="video-time-1">8:22</div>
+            </div>
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-2.jpeg"></div>
                 <div>
@@ -55,7 +64,9 @@
             </div>
         </div>
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-4.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-4.webp">
+                <div class="video-time">22:09</div>
+            </div>
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-4.jpeg"></div>
                 <div>
@@ -66,7 +77,9 @@
             </div>
         </div>
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-5.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-5.webp">
+                <div class="video-time">11:17</div>
+            </div>
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-5.jpeg"></div>
                 <div>
@@ -77,7 +90,9 @@
             </div>
         </div>
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-3.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-3.webp">
+                <div class="video-time">6:34</div>
+            </div>
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-3.jpg"></div>
                 <div>
@@ -88,7 +103,9 @@
             </div>
         </div>
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-6.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-6.webp">
+                <div class="video-time">19:59</div>
+            </div>
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-6.jpeg"></div>
                 <div>
@@ -99,7 +116,8 @@
             </div>
         </div>
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-7.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-7.webp">
+                <div class="video-time-1">10:13</div></div>
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-7.jpeg"></div>
                 <div>
@@ -110,7 +128,9 @@
             </div>
         </div>
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-8.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-8.webp">
+                <div class="video-time">7:12</div>
+            </div>
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-8.jpeg"></div>
                 <div>
@@ -121,29 +141,36 @@
             </div>
         </div>
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-3.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-9.webp">
+                <div class="video-time">1:55:57</div>
+            </div>
             <div class="video-details">
-                <div ><img class="profile-pic" src="Profile/channel-3.jpg"></div>
+                <div ><img class="profile-pic" src="Profile/channel-9.jpeg"></div>
                 <div>
-                    <div class="video-title">Luffy vs Kaido [ AMV ] MIDDLE OF THE NIGHT</div>
-                    <div class="video-creator">Vipper </div>
-                    <div class="video-content">13M views 1 year ago</div>
+                    <div class="video-title">Linked List - Singly + Doubly + Circular (Theory + Code + Implementation)</div>
+                    <div class="video-creator"> Kunal Kushwaha</div>
+                    <div class="video-content">405K views 1 year ago</div>
                 </div>
             </div>
         </div>
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-8.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-10.webp">
+                <div class="video-time">2:42</div>
+            </div>
             <div class="video-details">
-                <div ><img class="profile-pic" src="Profile/channel-8.jpeg"></div>
+                <div ><img class="profile-pic" src="Profile/channel-10.jpeg"></div>
                 <div>
-                    <div class="video-title">Inside The World's Biggest Passenger Plane</div>
-                    <div class="video-creator">Tech Vision</div>
-                    <div class="video-content">3.7M views · 10 months ago</div>
+                    <div class="video-title">
+                        Post Malone, Swae Lee - Sunflower (Spider-Man: Into the Spider-Verse)</div>
+                    <div class="video-creator">Post Malone</div>
+                    <div class="video-content">2.1B views 4 years ago</div>
                 </div>
             </div>
         </div>
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-11.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-11.webp">
+                <div class="video-time">10:40</div>
+            </div>
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-11.jpeg"></div>
                 <div>
@@ -154,13 +181,15 @@
             </div>
         </div>
         <div class="Img-class">
-            <div><img class="thumbnail" src="Thumbnail/thumbnail-3.webp"></div>
+            <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-12.webp">
+                <div class="video-time">4:33</div>
+            </div>
             <div class="video-details">
-                <div ><img class="profile-pic" src="Profile/channel-3.jpg"></div>
+                <div ><img class="profile-pic" src="Profile/channel-12.jpg"></div>
                 <div>
-                    <div class="video-title">Luffy vs Kaido [ AMV ] MIDDLE OF THE NIGHT</div>
-                    <div class="video-creator">Vipper </div>
-                    <div class="video-content">13M views 1 year ago</div>
+                    <div class="video-title">The Weeknd - Starboy ft. Daft Punk (Official Video)</div>
+                    <div class="video-creator"> The Weeknd</div>
+                    <div class="video-content">2.2B views 6 years ago</div>
                 </div>
             </div>
         </div>
