DAY 6 HTML-CSS PROGRESS

--- a/youtube/index.html
+++ b/youtube/index.html
@@ -18,13 +18,13 @@
         </div>
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
-            <button class="search-button"><img class="search-logo" src="Logo/search.svg"></button>
-            <button class="voice-button"><img class="voice-search" src="Logo/voice-search-icon.svg"></button>
+            <button class="search-button"><img class="search-logo" src="Logo/search.svg"><div class="tool-tip">Search</div></button>
+            <button class="voice-button"><img class="voice-search" src="Logo/voice-search-icon.svg"><div class="tool-tip">Search with your voice</div></button>
         </div>
         <div class="right-section">
-            <img class="upload" src="Logo/upload.svg">
-            <img class="apps" src="Logo/youtube-apps.svg">
-            <img class="notifi" src="Logo/notifications.svg">
+            <div class="upload-logo"><img class="upload" src="Logo/upload.svg"><div class="tool-tip">Create</div></div>
+            <div class="app-logo"><img class="apps" src="Logo/youtube-apps.svg"><div class="tool-tip">YouTube apps</div></div>
+            <div class="notifi-logo"><img class="notifi" src="Logo/notifications.svg"><div class="tool-tip">Notifications</div></div>
             <img class="dp" src="Logo/mydb.webp">
         </div>
     </div>
