DAY 7 HTML-CSS PROGRESS

--- a/youtube/index.html
+++ b/youtube/index.html
@@ -37,6 +37,7 @@
         <div class="sidebar-link"><img src="Logo/library.svg">Library</div>    
     </div>
     <div class="container">
+        <a class="link" href="https://youtu.be/n2RNcPRtAiY">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-1.webp">
             <div class="video-time">14:20</div>
@@ -49,10 +50,11 @@
                     <div class="video-content">3.4M views · 6 months ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+        <a class="link" href="https://youtu.be/mP0RAo9SKZk">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-2.webp">
-                <div class="video-time-1">8:22</div>
+                <div class="video-time">8:22</div>
             </div>
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-2.jpeg"></div>
@@ -62,7 +64,8 @@
                     <div class="video-content">19M views · 4 years ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+        <a class="link" href="https://youtu.be/094y1Z2wpJg">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-4.webp">
                 <div class="video-time">22:09</div>
@@ -75,7 +78,8 @@
                     <div class="video-content">18M views · 4 months ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+        <a class="link" href="https://youtu.be/86CQq3pKSUw">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-5.webp">
                 <div class="video-time">11:17</div>
@@ -88,7 +92,8 @@
                     <div class="video-content">519K views · 5 years ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+        <a class="link" href="https://youtu.be/l4yVf28RfO4">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-3.webp">
                 <div class="video-time">6:34</div>
@@ -101,7 +106,8 @@
                     <div class="video-content">13M views 1 year ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+        <a class="link" href="https://youtu.be/yXWw0_UfSFg">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-6.webp">
                 <div class="video-time">19:59</div>
@@ -114,10 +120,11 @@
                     <div class="video-content">141M views · 1 year ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+        <a class="link" href="https://youtu.be/fNVa1qMbF9Y">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-7.webp">
-                <div class="video-time-1">10:13</div></div>
+                <div class="video-time">10:13</div></div>
             <div class="video-details">
                 <div ><img class="profile-pic" src="Profile/channel-7.jpeg"></div>
                 <div>
@@ -126,7 +133,8 @@
                     <div class="video-content">6.6M views · 1 year ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+        <a class="link" href="https://youtu.be/lFm4EM1juls">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-8.webp">
                 <div class="video-time">7:12</div>
@@ -139,7 +147,8 @@
                     <div class="video-content">3.7M views · 10 months ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+        <a class="link" href="https://youtu.be/58YbpRDc4yw">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-9.webp">
                 <div class="video-time">1:55:57</div>
@@ -152,7 +161,8 @@
                     <div class="video-content">405K views 1 year ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+        <a class="link" href="https://youtu.be/ApXoWvfEYVU">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-10.webp">
                 <div class="video-time">2:42</div>
@@ -166,7 +176,8 @@
                     <div class="video-content">2.1B views 4 years ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+        <a class="link" href="https://youtu.be/ngumaU6ILHo">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-11.webp">
                 <div class="video-time">10:40</div>
@@ -179,7 +190,8 @@
                     <div class="video-content">9.9M views 12 years ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+        <a class="link" href="https://youtu.be/34Na4j8AVgA">
         <div class="Img-class">
             <div class="thumbnail_row"><img class="thumbnail" src="Thumbnail/thumbnail-12.webp">
                 <div class="video-time">4:33</div>
@@ -192,7 +204,7 @@
                     <div class="video-content">2.2B views 6 years ago</div>
                 </div>
             </div>
-        </div>
+        </div></a>
     </div>
 </body>
 </html>
